--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,28 @@
-- name: TC_agent_installation  
-  hosts:
-  - tc_agent
+#- name: TC_agent_installation  
+#  hosts:
+#  - tc_agent
 
-  roles:
-  - install_agent
+#  roles:
+#  - install_agent
 #- configure_agent
+
+- name: TC_agent_installation
+  hosts: 
+    - tc_agent
+
+  tasks:
+    - name: ===================== Install Java =====================
+      yum:    
+        name: java
+      state: latest
+      become: yes
+
+    - name: ===================== Install libselinux-python =====================
+      yum:
+        name: "{{item.package}}"
+      state: latest
+      with_items: 
+        - { package: 'libselinux-python' }
+        - { package: 'unzip' }
+      become: yes
+
