--- a/roles/install_agent/defaults/main.yml
+++ b/roles/install_agent/defaults/main.yml
@@ -1,2 +1,4 @@
 buildAgent_path: '/opt/buildAgent/'
 TeamCity_url: 'http://10.6.98.57:9999'
+buildAgent_user: 'root'
+TCAgentService_name: 'teamcity-agent'
