--- a/roles/install_agent/tasks/main.yml
+++ b/roles/install_agent/tasks/main.yml
@@ -39,3 +39,8 @@
     dest: "/etc/init.d/{{TCAgentService_name}}"
     mode: 0751
   become: yes
+
+- name: ==================== TC agent start =================
+  service:
+    name: '{{TCAgentService_name}}'
+    state: started
