--- a/roles/install_agent/tasks/main.yml
+++ b/roles/install_agent/tasks/main.yml
@@ -43,5 +43,5 @@
 - name: ==================== TC agent start =================
   service:
     name: teamcity-agent
-    state: stopped
+    state: started
   become: yes
