--- a/roles/install_agent/tasks/main.yml
+++ b/roles/install_agent/tasks/main.yml
@@ -43,5 +43,6 @@
 - name: ==================== TC agent start =================
   service:
     name: teamcity-agent
+    pattern: /etc/init.d
     state: started
   become: yes
