--- a/roles/install_agent/tasks/main.yml
+++ b/roles/install_agent/tasks/main.yml
@@ -45,4 +45,9 @@
     name: teamcity-agent
     pattern: /etc/init.d
     state: started
+    enabled: True
   become: yes
+
+#- name: ==================== Register Agents ================
+#  command: registerAgents.py
+#  become: yes
