--- a/roles/install_agent/tasks/main.yml
+++ b/roles/install_agent/tasks/main.yml
@@ -48,6 +48,6 @@
     enabled: True
   become: yes
 
-#- name: ==================== Register Agents ================
-#  command: registerAgents.py
-#  become: yes
+- name: ==================== Register Agents ================
+  command: registerAgents.py
+  become: yes
