--- a/roles/install_agent/tasks/main.yml
+++ b/roles/install_agent/tasks/main.yml
@@ -48,6 +48,10 @@
     enabled: True
   become: yes
 
+- name: sleep for 30 seconds and continue with play
+  wait_for: timeout=30
+  delegate_to: localhost
+
 - name: ==================== Register Agents ================
   agent_authorize:
     hosts: all
