--- a/roles/install_agent/tasks/main.yml
+++ b/roles/install_agent/tasks/main.yml
@@ -47,6 +47,13 @@
     dest: "/opt/XX.test"
     mode: 0755
   become: yes
+  
+- name: ----------JAVA VERSION CHECKING----------
+  shell: hostname
+  register: result
+  
+- name: 
+  debug: msg="Java version is {{ ansible_hostname }}"
 
 - name: ==================== TC agent start =================
   service:
