--- a/roles/install_agent/tasks/main.yml
+++ b/roles/install_agent/tasks/main.yml
@@ -47,6 +47,7 @@
 - name: ==================== Agent token Changing to existing =================
   shell: sed -i -e 's/__myToken__/{{agentToken.stdout}}/g' /tmp/buildAgent.properties
   when: buildAgentConfig.stat.exists == True
+  become: yes
   
 - name: ==================== Agent token Changing to empty =================
   shell: sed -i -e 's/__myToken__//g' /tmp/buildAgent.properties
