--- a/roles/install_agent/tasks/main.yml
+++ b/roles/install_agent/tasks/main.yml
@@ -56,9 +56,14 @@
   become: yes
   
 - name: ==================== Agent token Changing to empty =================
-  shell: sed -i -e 's/__myToken__//g' /tmp/buildAgent.properties
-  when: buildAgentConfig.stat.exists == False
- 
+  #shell: sed -i -e 's/__myToken__//g' /tmp/buildAgent.properties
+  #when: buildAgentConfig.stat.exists == False
+  lineinfile:
+    path: /tmp/buildAgent.properties
+    regexp: '^__myToken__'
+    line: ''
+  become: yes
+  
 - name: ==================== Copying buildAgent.properties to '{{buildAgent_path}}conf' =================
   copy:
     src: /tmp/buildAgent.properties
