--- a/roles/install_agent/tasks/main.yml
+++ b/roles/install_agent/tasks/main.yml
@@ -33,22 +33,19 @@
     path: "{{buildAgent_path}}conf/buildAgent.properties"
   register: buildAgentConfig
 
-- name: ---------- GET agent token ----------
+- name: ===================== Getting existing agent token if exist =====================
   shell: cat {{buildAgent_path}}conf/buildAgent.properties | grep authorizationToken= | cut -d "=" -f2
   register: agentToken
   when: buildAgentConfig.stat.exists == True
   
-- name: ==================== buildAgent config copying to /tmp =================
+- name: ==================== Copying buildAgent config to /tmp for token changing =================
   template:
     src: buildagent_properties.j2
     dest: "/tmp/buildAgent.properties"
     mode: 0755
   become: yes
 
-- name: ==================== Agent token Changing to existing =================
-  #shell: sed -i -e 's/__myToken__/{{agentToken.stdout}}/g' /tmp/buildAgent.properties
-  #when: buildAgentConfig.stat.exists == True
-  #become: yes
+- name: ==================== Agent token changing to existing =================
   lineinfile:
     path: /tmp/buildAgent.properties
     regexp: '__myToken__'
@@ -56,9 +53,7 @@
   when: buildAgentConfig.stat.exists == True  
   become: yes
   
-- name: ==================== Agent token Changing to empty =================
-  #shell: sed -i -e 's/__myToken__//g' /tmp/buildAgent.properties
-  #when: buildAgentConfig.stat.exists == False
+- name: ==================== Agent token changing to empty =================
   lineinfile:
     path: /tmp/buildAgent.properties
     regexp: '__myToken__'
@@ -81,7 +76,7 @@
   become: yes
   
 - name: 
-  debug: msg="Java version is {{ agentToken.stdout }}"
+  debug: msg="Existing token for agent {{ ansible_hostname }} is: {{ agentToken.stdout }}"
   when: buildAgentConfig.stat.exists == True
 
 - name: ==================== TC agent start =================
