--- a/roles/install_agent/tasks/main.yml
+++ b/roles/install_agent/tasks/main.yml
@@ -81,15 +81,17 @@
 
 - name: ==================== TC agent start =================
   service:
-    name: teamcity-agent
+    name: '{{TCAgentService_name}}'
     pattern: /etc/init.d
     state: started
     enabled: True
   become: yes
 
 - name: ==================== Wait until agent starts up =================
-  wait_for: timeout=120
-  delegate_to: localhost
+  #wait_for: timeout=120
+  #delegate_to: localhost
+  service: '{{TCAgentService_name}}'
+  state: started
 
 - name: ==================== Register Agents ================
   agent_authorize:
