--- a/roles/install_agent/defaults/main.yml
+++ b/roles/install_agent/defaults/main.yml
@@ -4,3 +4,5 @@ buildAgent_user: 'root'
 TCAgentService_name: 'teamcity-agent'
 tc_user: '__tc_user__'
 tc_password: '__tc_password__'
+buildTools_path: '/buildspace/buildTools/'
+java_home: 'jdk1.8.0_161'
